fixed navigation overflow issue on mobile

--- a/barcamp-theme/static/css/style.css
+++ b/barcamp-theme/static/css/style.css
@@ -88,8 +88,7 @@ h3.sidebar-title {
 #navbar ul li a:link,
 #navbar ul li a:active,
 #navbar ul li a:visited {
-	text-transform:uppercase;
-	font-size:13px;
+	font-size:14px;
 }
 
 dd {
@@ -351,6 +350,10 @@ ul.breadcrumbs li {
 	margin:0 0 20px 0;
 }
 
+iframe {
+	width:100%;
+}
+
 ul.inline {
 	display:inline;
 }
@@ -476,7 +479,7 @@ ul.inline li a:hover {
 #navbar ul li a:link,
 #navbar ul li a:active,
 #navbar ul li a:visited {
-	font-size:16px;
+	font-size:14px;
 }
 
 
